--- a/contact.html
+++ b/contact.html
@@ -3,24 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us</title>
+    <title>Contact Us - Munamii Cakery</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- CONTACT PAGE-->
-    <p>Home delivery service: All the city of Stockholm (redacted) and Malmo (redacted) 
-    with additional cost.</p>
-    <p>Place to pick up order: Via la Costa Avenue. Blue Port gated neighbourhood. 
-    We will send you the GPS Location via WhatsApp.</p>
-    <p>Orders must be placed 2 days before for greater security, processing and availability.</p>
-    <p>Tuesday to Saturday 9 a.m. at 2 p.m.</p>
+    <header>
+        <div class="container">
+            <div class="header-content">
+                <img class="logo" src="logo.png" alt="Munamii Cakery Logo">
+                <h1>Munamii Cakery</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="emailform.html">Email Form</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <h1>Contact Us</h1>
-    <p>Email: info@ourbakery.com</p>
-    <p>Phone: 123-456-7890</p>
-    <p>Address: 1234 Main St, Anytown, USA</p>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="products.html">Products</a>
-    <a href="emailform.html">Email Form</a>
+    <main class="container">
+        <h1>Contact Us</h1>
+        <p>Email: info@ourbakery.com</p>
+        <p>Phone: 123-456-7890</p>
+        <p>Address: 1234 Main St, Anytown, USA</p>
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <p>&copy; 2023 Munamii Cakery. All rights reserved.</p>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/munamiicakery/" target="_blank">Instagram</a>
+                        <a href="https://www.facebook.com/p/munamiicakery-100068077487468/" target="_blank">Facebook</a>
+                        <a href="mailto:info@munamiicakery.com">Email</a>
+                    </div>
+                </div>
+                <div class="subscribe">
+                    <h3>Subscribe to our Newsletter</h3>
+                    <form action="#" method="post" class="subscribe-form">
+                        <input type="email" name="email" placeholder="Enter your email" required>
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
