--- a/emailform.html
+++ b/emailform.html
@@ -3,46 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Email Form</title>
-</head> 
+    <title>Email Form - Munamii Cakery</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
-    <h1>Email Form</h1>
-    <form id="emailForm">
-        <label for="name">Name:</label>
-        <input type="text" id="name" name="name" required>
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
-        <button type="submit">Submit</button>
-    </form>
-    <div id="message"></div>
-    <a href="index.html">Home</a>
-    <a href="about.html">About Us</a>
-    <a href="products.html">Products</a>
-    <a href="contact.html">Contact Us</a>
+    <header>
+        <div class="container">
+            <div class="header-content">
+                <img class="logo" src="logo.png" alt="Munamii Cakery Logo">
+                <h1>Munamii Cakery</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="emailform.html">Email Form</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <script>
-        document.getElementById('emailForm').addEventListener('submit', function(e) {
-            e.preventDefault();
+    <main class="container">
+        <h1>Email Us</h1>
+        <form id="emailForm">
+            <label for="name">Name:</label>
+            <input type="text" id="name" name="name" required>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+            <button type="submit">Submit</button>
+        </form>
+        <div id="message"></div>
+    </main>
 
-            const name = document.getElementById('name').value;
-            const email = document.getElementById('email').value;
-
-            fetch('/submit-email', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ name, email }),
-            })
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById('message').textContent = data.message;
-            })
-            .catch((error) => {
-                console.error('Error:', error);
-                document.getElementById('message').textContent = 'An error occurred. Please try again.';
-            });
-        });
-    </script>
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <p>&copy; 2023 Munamii Cakery. All rights reserved.</p>
+                <div class="social-links">
+                    <a href="https://www.instagram.com/munamiicakery/" target="_blank">Instagram</a>
+                    <a href="https://www.facebook.com/p/munamiicakery-100068077487468/" target="_blank">Facebook</a>
+                    <a href="mailto:info@munamiicakery.com">Email</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
+
+<script>
+    document.getElementById('emailForm').addEventListener('submit', function(e) {
+        e.preventDefault();
+
+        const name = document.getElementById('name').value;
+        const email = document.getElementById('email').value;
+
+        fetch('/submit-email', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json',
+            },
+            body: JSON.stringify({ name, email }),
+        })
+        .then(response => response.json())
+        .then(data => {
+            document.getElementById('message').textContent = data.message;
+        })
+        .catch((error) => {
+            console.error('Error:', error);
+            document.getElementById('message').textContent = 'An error occurred. Please try again.';
+        });
+    });
+</script>
