--- a/about.html
+++ b/about.html
@@ -3,21 +3,53 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>About Us - Munamii Cakery</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>  
-    <!-- ABOUT PAGE TEXT
-    At Munamii Cakery, each cake, each box of cupcakes that we make has 
-    a very special value for us. We not only want to bring a dessert to 
-    your table but rather a unique experience for you, which will become 
-    an unforgettable memory. We have been in the pastry market for more 
-    than 8 years and now we offer you a new way to shop through our website. -->
+<body>
+    <header>
+        <div class="container">
+            <div class="header-content">
+                <img class="logo" src="logo.png" alt="Munamii Cakery Logo">
+                <h1>Munamii Cakery</h1>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="products.html">Products</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="emailform.html">Email Form</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-    <h1>About Us</h1>
-    <p>We are a bakery that specializes in creating delicious cakes and cupcakes for any occasion.</p>
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="contact.html">Contact Us</a>
-    <a href="emailform.html">Email Form</a> 
+    <main class="container">
+        <h1>About Munamii Cakery</h1>
+        <!-- Add your about us content here -->
+    </main>
+
+    <footer>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-info">
+                    <p>&copy; 2023 Munamii Cakery. All rights reserved.</p>
+                    <div class="social-links">
+                        <a href="https://www.instagram.com/munamiicakery/" target="_blank">Instagram</a>
+                        <a href="https://www.facebook.com/p/munamiicakery-100068077487468/" target="_blank">Facebook</a>
+                        <a href="mailto:info@munamiicakery.com">Email</a>
+                    </div>
+                </div>
+                <div class="subscribe">
+                    <h3>Subscribe to our Newsletter</h3>
+                    <form action="#" method="post" class="subscribe-form">
+                        <input type="email" name="email" placeholder="Enter your email" required>
+                        <button type="submit">Subscribe</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
