--- a/products.html
+++ b/products.html
@@ -19,130 +19,132 @@
                     <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="emailform.html">Email Form</a></li>
+                    <li><a href="#cup-cakes">Cup Cakes</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main class="container">
-        <h1>Our Products</h1>
+        <h2>Our Products</h2>
         
-        <h2>Wedding Cakes</h2>
+        <h2 id="wedding-cakes">Wedding Cakes</h2>
         <div class="Cakes">
             <div class="cake-item">
                 <img src="Cakes/T1.png" alt="Wedding Cake 1">
                 <div class="cake-info">
                     <h3>Elegant Tier</h3>
-                    <p>$299.99</p>
+                    <p>€299.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="Cakes/T2.png" alt="Wedding Cake 2">
                 <div class="cake-info">
                     <h3>Floral Fantasy</h3>
-                    <p>$349.99</p>
+                    <p>€349.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="Cakes/T3.png" alt="Wedding Cake 3">
                 <div class="cake-info">
                     <h3>Classic Design</h3>
-                    <p>$299.99</p>
+                    <p>€299.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="Cakes/T4.png" alt="Wedding Cake 4">
                 <div class="cake-info">
                     <h3>Modern Twist</h3>
-                    <p>$349.99</p>
+                    <p>€349.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="Cakes/T5.png" alt="Wedding Cake 5">
                 <div class="cake-info">
                     <h3>Whimsical Dream</h3>
-                    <p>$299.99</p>
+                    <p>€299.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="Cakes/T6.png" alt="Wedding Cake 6">
                 <div class="cake-info">
                     <h3>Floral Delight</h3>
-                    <p>$349.99</p>
+                    <p>€349.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="Cakes/T7.png" alt="Wedding Cake 7">
                 <div class="cake-info">
                     <h3>Classic Elegance</h3>
-                    <p>$299.99</p>
+                    <p>€299.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="Cakes/T8.png" alt="Wedding Cake 8">
                 <div class="cake-info">
                     <h3>Modern Chic</h3>
+                    <p>€349.99</p>
                     <p>$349.99</p>
                 </div>
             </div>
         </div>
         
-        <h2>Cup Cakes</h2>
+        <h2 id="cup-cakes">Cup Cakes</h2>
         <div class="CupCakes">
             <div class="cake-item">
                 <img src="CupCakes/CC1.png" alt="Cup Cake 1">
                 <div class="cake-info">
                     <h3>Chocolate Swirl</h3>
-                    <p>$3.99</p>
+                    <p>€3.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="CupCakes/CC2.png" alt="Cup Cake 2">
                 <div class="cake-info">
                     <h3>Vanilla Dream</h3>
-                    <p>$3.99</p>
+                    <p>€3.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="CupCakes/CC3.png" alt="Cup Cake 3">
                 <div class="cake-info">
                     <h3>Strawberry Shortcake</h3>
-                    <p>$3.99</p>
+                    <p>€3.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="CupCakes/CC4.png" alt="Cup Cake 4">
                 <div class="cake-info">
                     <h3>Carrot Cake</h3>
-                    <p>$3.99</p>
+                    <p>€3.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="CupCakes/CC5.png" alt="Cup Cake 5">
                 <div class="cake-info">
                     <h3>Red Velvet</h3>
-                    <p>$3.99</p>
+                    <p>€3.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="CupCakes/CC6.png" alt="Cup Cake 6">
                 <div class="cake-info">
                     <h3>Lemon Poppyseed</h3>
-                    <p>$3.99</p>
+                    <p>€3.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="CupCakes/CC7.png" alt="Cup Cake 7">
                 <div class="cake-info">
                     <h3>Espresso</h3>
-                    <p>$3.99</p>
+                    <p>€3.99</p>
                 </div>
             </div>
             <div class="cake-item">
                 <img src="CupCakes/CC8.png" alt="Cup Cake 8">
                 <div class="cake-info">
                     <h3>Chocolate Chip</h3>
-                    <p>$3.99</p>
+                    <p>€3.99</p>
                 </div>
             </div>
         </div>
