--- a/emailform.html
+++ b/emailform.html
@@ -17,22 +17,26 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="about.html">About Us</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
-                    <li><a href="emailform.html">Email Form</a></li>
+                    <li><a href="about.html">About Us</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
     <main class="container">
-        <h1>Email Us</h1>
-        <form id="emailForm">
+        
+        <form id="emailForm" class="email-form">
             <label for="name">Name:</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="name" required placeholder="Enter your name">
+            <br>
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
-            <button type="submit">Submit</button>
+            <input type="email" id="email" name="email" required placeholder="Enter your email">
+            <br>
+            <label for="message">Message:</label>
+            <textarea id="message" name="message" rows="8" required placeholder="Type your message here..."></textarea>
+            <br>
+            <button type="submit">Send Message</button>
         </form>
         <div id="message"></div>
     </main>
@@ -76,3 +80,4 @@
         });
     });
 </script>
+
